[fix](ENG) poster min-width on mobile

--- a/sections/Poster/Poster.module.css
+++ b/sections/Poster/Poster.module.css
@@ -107,6 +107,9 @@
   .text {
     margin-left: 0;
   }
+  .poster {
+    min-width: 100vw;
+  }
 
   .wrapper_next {
     flex-direction: column;
